--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weather",
-  "homepage":".",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +15,7 @@
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "vercel": "^27.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
